qtdemux: Make function foreach method friendly

https://bugzilla.gnome.org/show_bug.cgi?id=797239